Fix: fixed new overflow issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,8 +20,10 @@ nav {
 }
 
 .jumbotron {
+  position: relative;
   width: 100%;
-  height: 65vh;
+  height: 100%;
+  max-height: 100%;
   padding-top: 5%;
   margin-top: 5%;
   overflow: auto;
